# sigrp

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  ESPEC.md  PROJECT_STRUCTURE.md  README.md  RF-11_IMPLEMENTATION_SUMMARY.md  SETUP.md  UV_REFERENCE.md  check_superusers.py  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
.github/instructions/: Consideraciones.instructions.md
apps/analytics/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
apps/analytics/templates/analytics/: dashboard.html  financial_report.html  resource_booking.html  resources_utilization.html  team_mood.html
apps/core/: __init__.py  models.py  urls.py  views.py
apps/projects/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py  views_allocations.py
apps/projects/migrations/: 0001_initial.py  0002_allocation.py  0003_alter_project_budget_limit_alter_project_fixed_price_and_more.py  0004_add_manual_progress_percentage.py
apps/projects/templates/projects/: allocation_form.html  assign_resources.html  create.html  detail.html  edit.html  list.html  manage_allocations.html
apps/resources/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/resources/management/commands/: sync_resources_qdrant.py
apps/resources/migrations/: 0001_initial.py  0002_alter_resource_options_remove_resource_full_name_and_more.py  0003_alter_role_code.py  0004_alter_resource_internal_cost_and_more.py
apps/standups/: __init__.py  admin.py  apps.py  models.py  nlp_utils.py  tasks.py  urls.py  views.py
apps/standups/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: ARCHITECTURE.md  ENTIDADES.md  IMPLEMENTACION_RESOURCES_QDRANT.md  IMPLEMENTATION_SUMMARY.md  MODELOS_IMPLEMENTADOS.md
static/css/: styles.css
static/js/: main.js
templates/: base.html
templates/core/: home.html
(+10 files in other folders)
